Base: Don't give the `phys` group direct access to storage devices
This means that anon can no longer bypass filesystem access restrictions
by directly modifying the underlying block device.

--- a/Base/etc/DeviceMapper.ini
+++ b/Base/etc/DeviceMapper.ini
@@ -51,7 +51,7 @@ Name=storage
 DevTmpFSPath=hd%c
 Type=BlockDevice
 MajorNumber=3
-GroupPermissions=phys
+GroupPermissions=root
 CreatePermissions=0660
 
 [VirtualConsole]
