LoginServer: Check if user has an existing home folder

--- a/Userland/Services/LoginServer/CMakeLists.txt
+++ b/Userland/Services/LoginServer/CMakeLists.txt
@@ -13,4 +13,4 @@ set(SOURCES
 )
 
 serenity_bin(LoginServer)
-target_link_libraries(LoginServer PRIVATE LibCore LibGfx LibGUI LibMain)
+target_link_libraries(LoginServer PRIVATE LibCore LibFileSystem LibGfx LibGUI LibMain)
