Utilities: timeout: Add command, license header; remove unused include

--- a/Userland/Utilities/CMakeLists.txt
+++ b/Userland/Utilities/CMakeLists.txt
@@ -181,6 +181,7 @@ set(CMD_SOURCES_CPP
     test-pthread.cpp
     test-unveil.cpp
     test.cpp
+    timeout.cpp
     test_env.cpp
     timezone.cpp
     top.cpp
