LibGfx/CCITT: Add a CCITT4 Encoder
The spec describes really precisely how encoders should proceed, this
allows us to compare directly our output to an image encoded by libtiff.

--- a/Tests/LibGfx/CMakeLists.txt
+++ b/Tests/LibGfx/CMakeLists.txt
@@ -2,6 +2,7 @@ set(TEST_SOURCES
     BenchmarkGfxPainter.cpp
     BenchmarkJPEGLoader.cpp
     BenchmarkPNG.cpp
+    TestCCITT.cpp
     TestColor.cpp
     TestDeltaE.cpp
     TestFontHandling.cpp
