CI: Switch mac host compiler from brew's to Xcode's

--- a/.github/workflows/lagom-template.yml
+++ b/.github/workflows/lagom-template.yml
@@ -71,8 +71,8 @@ jobs:
               echo "host_cxx=g++-13" >> "$GITHUB_OUTPUT"
             fi
           elif ${{ inputs.os_name == 'macOS' }} ; then
-            echo "host_cc=$(brew --prefix llvm@18)/bin/clang" >> "$GITHUB_OUTPUT"
-            echo "host_cxx=$(brew --prefix llvm@18)/bin/clang++" >> "$GITHUB_OUTPUT"
+            echo "host_cc=$(xcrun --find clang)" >> "$GITHUB_OUTPUT"
+            echo "host_cxx=$(xcrun --find clang++)" >> "$GITHUB_OUTPUT"
           fi
 
       # https://github.com/actions/runner-images/issues/9330
