Meta: Port recent changes to the GN build
e0eee0bc7e1ce17 LibGfx/CCITT: Add debug output to the encoder
d66a8e96d020c71 LibGfx/CCITT: Add a CCITT4 Encoder

--- a/Meta/gn/secondary/AK/BUILD.gn
+++ b/Meta/gn/secondary/AK/BUILD.gn
@@ -238,6 +238,7 @@ write_cmake_config("ak_debug_gen") {
     "CACHE_DEBUG=",
     "CALLBACK_MACHINE_DEBUG=",
     "CANVAS_RENDERING_CONTEXT_2D_DEBUG=",
+    "CCITT_DEBUG=",
     "CFF_DEBUG=",
     "CMAKE_DEBUG=",
     "COMPOSE_DEBUG=",
