--- a/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
@@ -71,6 +71,7 @@ shared_library("LibGfx") {
     "ImageFormats/BilevelImage.cpp",
     "ImageFormats/BooleanDecoder.cpp",
     "ImageFormats/CCITTDecoder.cpp",
+    "ImageFormats/CCITTEncoder.cpp",
     "ImageFormats/DDSLoader.cpp",
     "ImageFormats/DICOMLoader.cpp",
     "ImageFormats/GIFLoader.cpp",
