Meta: Add `icc` to GN build

--- a/Meta/gn/secondary/Userland/Utilities/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Utilities/BUILD.gn
@@ -8,6 +8,18 @@ executable("base64") {
   ]
 }
 
+executable("icc") {
+  sources = [ "icc.cpp" ]
+  include_dirs = [ "//Userland/Libraries" ]
+  deps = [
+    "//AK",
+    "//Userland/Libraries/LibCore",
+    "//Userland/Libraries/LibGfx",
+    "//Userland/Libraries/LibMain",
+    "//Userland/Libraries/LibURL",
+  ]
+}
+
 executable("image") {
   sources = [ "image.cpp" ]
   include_dirs = [ "//Userland/Libraries" ]
