LibGfx+image: Add scaffolding for writing tiff files
The motivation is wanting to losslessly write CMYK data for testing
color conversion accuracy, and TIFF seems like the easiest way to
get that.

--- a/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
@@ -105,6 +105,7 @@ shared_library("LibGfx") {
     "ImageFormats/QOIWriter.cpp",
     "ImageFormats/TGALoader.cpp",
     "ImageFormats/TIFFLoader.cpp",
+    "ImageFormats/TIFFWriter.cpp",
     "ImageFormats/TinyVGLoader.cpp",
     "ImageFormats/WebPLoader.cpp",
     "ImageFormats/WebPLoaderLossless.cpp",
