LibGfx/JBIG2: Move HuffmanTable to JBIG2Shared
It will be used by the writer, too.

This requires adding a JBIG2Shared.cpp file too.

Pure code move, no behavior change.

--- a/Userland/Libraries/LibGfx/CMakeLists.txt
+++ b/Userland/Libraries/LibGfx/CMakeLists.txt
@@ -57,6 +57,7 @@ set(SOURCES
     ImageFormats/ISOBMFF/JPEGXLBoxes.cpp
     ImageFormats/ISOBMFF/Reader.cpp
     ImageFormats/JBIG2Loader.cpp
+    ImageFormats/JBIG2Shared.cpp
     ImageFormats/JBIG2Writer.cpp
     ImageFormats/JPEG2000Loader.cpp
     ImageFormats/JPEG2000ProgressionIterators.cpp
