--- a/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
@@ -84,6 +84,7 @@ shared_library("LibGfx") {
     "ImageFormats/ISOBMFF/Reader.cpp",
     "ImageFormats/ImageDecoder.cpp",
     "ImageFormats/JBIG2Loader.cpp",
+    "ImageFormats/JBIG2Shared.cpp",
     "ImageFormats/JBIG2Writer.cpp",
     "ImageFormats/JPEG2000Loader.cpp",
     "ImageFormats/JPEG2000ProgressionIterators.cpp",
