LibGfx/JPEGXL: Introduce a JPEGXL namespace
This commit move the whole decoder into this namespace and remove the
JPEGXL prefix on class or files that are now part of it.

No behavior change.

--- a/Userland/Libraries/LibGfx/CMakeLists.txt
+++ b/Userland/Libraries/LibGfx/CMakeLists.txt
@@ -63,8 +63,8 @@ set(SOURCES
     ImageFormats/JPEG2000ProgressionIterators.cpp
     ImageFormats/JPEG2000TagTree.cpp
     ImageFormats/JPEGLoader.cpp
-    ImageFormats/JPEGXL/JPEGXLEntropyDecoder.cpp
-    ImageFormats/JPEGXL/JPEGXLICC.cpp
+    ImageFormats/JPEGXL/EntropyDecoder.cpp
+    ImageFormats/JPEGXL/ICC.cpp
     ImageFormats/JPEGXLLoader.cpp
     ImageFormats/JPEGWriter.cpp
     ImageFormats/MQArithmeticCoder.cpp
