LibGfx/JPEGXL: Move SelfCorrectingPredictor related code to its own file
No behavior change.

--- a/Userland/Libraries/LibGfx/CMakeLists.txt
+++ b/Userland/Libraries/LibGfx/CMakeLists.txt
@@ -64,6 +64,7 @@ set(SOURCES
     ImageFormats/JPEGLoader.cpp
     ImageFormats/JPEGXL/EntropyDecoder.cpp
     ImageFormats/JPEGXL/ICC.cpp
+    ImageFormats/JPEGXL/SelfCorrectingPredictor.cpp
     ImageFormats/JPEGXLLoader.cpp
     ImageFormats/JPEGWriter.cpp
     ImageFormats/MQArithmeticCoder.cpp
