--- a/Userland/Libraries/LibGfx/CMakeLists.txt
+++ b/Userland/Libraries/LibGfx/CMakeLists.txt
@@ -63,6 +63,7 @@ set(SOURCES
     ImageFormats/JPEG2000ProgressionIterators.cpp
     ImageFormats/JPEG2000TagTree.cpp
     ImageFormats/JPEGLoader.cpp
+    ImageFormats/JPEGXL/DCTNaturalOrder.cpp
     ImageFormats/JPEGXL/EntropyDecoder.cpp
     ImageFormats/JPEGXL/ICC.cpp
     ImageFormats/JPEGXL/ModularTransforms.cpp
