Applications: Add SampleEditor audio editing application
SampleEditor is a graphical audio sample editor supporting WAV and
FLAC file formats. It provides essential audio editing functionality
including playback, waveform visualization, and clipboard operations.

Key features:
- WAV and FLAC format support for loading and saving
- Real-time audio playback with configurable start positions
- Copy/cut/paste operations with format validation
- Reference-based architecture for memory-efficient editing
- Zoom controls for waveform inspection
- Keyboard shortcuts for all common operations

The application uses a block-based design where audio content is
represented as file references (SampleFileBlock) or silence
(SampleNullBlock). Copy/paste operations store file paths and ranges
in the clipboard, creating new references when pasted rather than
duplicating audio data. This allows efficient editing of large files
without loading everything into RAM.

--- a/Userland/Applications/CMakeLists.txt
+++ b/Userland/Applications/CMakeLists.txt
@@ -37,6 +37,7 @@ add_subdirectory(Presenter)
 add_subdirectory(Run)
 add_subdirectory(Screenshot)
 add_subdirectory(Settings)
+add_subdirectory(SampleEditor)
 add_subdirectory(SoundPlayer)
 add_subdirectory(SpaceAnalyzer)
 add_subdirectory(Spreadsheet)
