CI: Use a bigger disk size for coverage build
The coverage data is too big to fit on the default image, this new size
is quite arbitrary while being in the range of "give enough headroom"
and fit in CI.
After running the tests and booting SerenityOS in graphical mode,
3.6 GiB were used. So 5 GiB for the base image is more than enough for
now.

--- a/.github/workflows/serenity-template.yml
+++ b/.github/workflows/serenity-template.yml
@@ -50,6 +50,11 @@ jobs:
           os: 'Serenity'
           arch: ${{ inputs.arch }}
 
+      - name: Set Disk Size for Coverage Builds
+        if: ${{ inputs.coverage == 'ON' }}
+        # Using 5GiB here is arbitrary.
+        run: echo "SERENITY_DISK_SIZE_BYTES=5368709120" >> $GITHUB_ENV
+
       # === PREPARE FOR BUILDING ===
 
       - name: Lint
