Base: Stop skipping UserspaceEmulator tests
These have been removed a long time ago.

--- a/Base/home/anon/.config/Tests.ini
+++ b/Base/home/anon/.config/Tests.ini
@@ -1,6 +1,6 @@
 [Global]
 SkipDirectories=Kernel/Legacy Shell
-SkipRegex=^ue-.*$
+SkipRegex=^$
 SkipTests=TestCommonmark function.sh
 NotTestsPattern=^.*(txt|frm|inc|so|elf)$
 
