Base: Add the `self-test-coverage` system mode
This will allow us to have custom behavior for coverage builds.

--- a/Base/etc/SystemServer.ini
+++ b/Base/etc/SystemServer.ini
@@ -1,6 +1,6 @@
 [NetworkServer]
 User=root
-SystemModes=text,graphical,self-test
+SystemModes=text,graphical,self-test,self-test-coverage
 
 [LookupServer]
 Socket=/tmp/portal/lookup
@@ -8,7 +8,7 @@ SocketPermissions=660
 Priority=low
 KeepAlive=true
 User=lookup
-SystemModes=text,graphical,self-test
+SystemModes=text,graphical,self-test,self-test-coverage
 
 [WindowServer]
 Socket=/tmp/portal/window,/tmp/portal/wm
@@ -50,6 +50,14 @@ Environment=DO_SHUTDOWN_AFTER_TESTS=1 TERM=xterm PATH=/bin:/usr/bin:/usr/local/b
 User=anon
 WorkingDirectory=/home/anon
 SystemModes=self-test
+
+[CoverageRunner@ttyS0]
+Executable=/home/anon/Tests/run-tests-and-shutdown.sh
+StdIO=/dev/ttyS0
+Environment=COVERAGE_RUN=1 DO_SHUTDOWN_AFTER_TESTS=1 TERM=xterm PATH=/bin:/usr/bin:/usr/local/bin
+User=anon
+WorkingDirectory=/home/anon
+SystemModes=self-test-coverage
 
 [GenerateManpages@ttyS0]
 Executable=/root/generate_manpages.sh
