LibLine: Correctly count multi-code-point glyphs towards line length
This also adds some tests to make sure things don't break.

--- a/Meta/Lagom/CMakeLists.txt
+++ b/Meta/Lagom/CMakeLists.txt
@@ -691,6 +691,7 @@ if (BUILD_LAGOM)
             LibHID
             LibHTTP
             LibIMAP
+            LibLine
             LibLocale
             LibMarkdown
             LibMedia
