--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(LibGfx)
 add_subdirectory(LibHID)
 add_subdirectory(LibIMAP)
 add_subdirectory(LibJS)
+add_subdirectory(LibLine)
 add_subdirectory(LibLocale)
 add_subdirectory(LibMarkdown)
 add_subdirectory(LibMedia)
