Tests: Add a test to make sure that spinning processes receive signals

--- a/Tests/Kernel/CMakeLists.txt
+++ b/Tests/Kernel/CMakeLists.txt
@@ -59,6 +59,7 @@ set(LIBTEST_BASED_SOURCES
     TestProcFSWrite.cpp
     TestSigAltStack.cpp
     TestSigHandler.cpp
+    TestSignalDispatch.cpp
     TestTCPSocket.cpp
     TestWait.cpp
     TestWXProtection.cpp
