Kernel/Net: Add a USB CDC-ECM Network Adapter Driver
This crudely plugs into the new CDC driver framework and provides a
basic implementation for ECM network adapters.

To test this you need to force the `run.py` to use a `usb-net` device,
in-place of the default e1000 network device.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -285,6 +285,7 @@ set(KERNEL_SOURCES
     Net/Intel/E1000ENetworkAdapter.cpp
     Net/Intel/E1000NetworkAdapter.cpp
     Net/Realtek/RTL8168NetworkAdapter.cpp
+    Net/USB/CDCECM.cpp
     Net/VirtIO/VirtIONetworkAdapter.cpp
     Net/IP/Socket.cpp
     Net/LocalSocket.cpp
