--- a/.github/workflows/manpages.yml
+++ b/.github/workflows/manpages.yml
@@ -9,14 +9,18 @@ on:
 jobs:
   convert_using_pandoc:
     runs-on: ubuntu-24.04
-    if: always() && github.repository == 'SerenityOS/serenity' && github.ref == 'refs/heads/master'
+    if: github.repository == 'SerenityOS/serenity' && github.ref == 'refs/heads/master'
     steps:
-      - uses: actions/checkout@v6
+      # FIXME: Update this version once JamesIves/github-pages-deploy-action has a more recent release than v4.7.4.
+      - uses: actions/checkout@v6.0.0
+
       - uses: r-lib/actions/setup-pandoc@v2
         with:
           pandoc-version: '2.13'
+
       - name: Actually build website
         run: ./Meta/build-manpages-website.sh
+
       - name: Deploy to GitHub pages
         uses: JamesIves/github-pages-deploy-action@v4.7.4
         with:
