--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -15,12 +15,13 @@ jobs:
       fail-fast: false
 
     steps:
-      # FIXME: Update these versions once JamesIves/github-pages-deploy-action has a more recent release than v4.7.4.
       - name: Checkout SerenityOS/serenity
-        uses: actions/checkout@v6.0.0
+        uses: actions/checkout@v6.0.1
+        with:
+          persist-credentials: false
 
       - name: Checkout SerenityOS/libjs-data libjs-wasm
-        uses: actions/checkout@v6.0.0
+        uses: actions/checkout@v6.0.1
         with:
           path: libjs-data
           ref: libjs-wasm
@@ -99,7 +100,7 @@ jobs:
           tar --exclude='.[^/]*' -czvf libjs-wasm.tar.gz -C ${{ github.workspace }}/libjs-data .
 
       - name: Deploy to GitHub
-        uses: JamesIves/github-pages-deploy-action@v4.7.4
+        uses: JamesIves/github-pages-deploy-action@v4.7.6
         if: github.ref == 'refs/heads/master'
         with:
           git-config-name: BuggieBot
