AK+Userland+Kernel+Tests: Deduplicate IPv4 header checksumming
Previously, there were two slightly different implementations of this in
the Kernel and in LibCrypto.

This patch removes those, and replaces them with an implementation that
seeks to combine the best aspects of both while not being a drop-in
replacement for either.

Two new tests are also included.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -611,6 +611,7 @@ set(AK_SOURCES
     ../AK/DOSPackedTime.cpp
     ../AK/GenericLexer.cpp
     ../AK/Hex.cpp
+    ../AK/InternetChecksum.cpp
     ../AK/MemoryStream.cpp
     ../AK/SipHash.cpp
     ../AK/Stream.cpp
