Tests: Add a test verifying that simultaneous page faults work correctly

--- a/Tests/Kernel/CMakeLists.txt
+++ b/Tests/Kernel/CMakeLists.txt
@@ -46,6 +46,7 @@ set(LIBTEST_BASED_SOURCES
     TestInvalidUIDSet.cpp
     TestSFNUtilities.cpp
     TestSharedInodeVMObject.cpp
+    TestPageFaultRace.cpp
     TestPosixFallocate.cpp
     TestPosixSpawn.cpp
     TestPrivateInodeVMObject.cpp
@@ -84,3 +85,5 @@ endif()
 foreach(libtest_source IN LISTS LIBTEST_BASED_SOURCES)
     serenity_test("${libtest_source}" Kernel LIBS LibSystem)
 endforeach()
+
+target_link_libraries(TestPageFaultRace PRIVATE LibThreading)
