Kernel/aarch64: Add GICv3 and GICv4 support
This can be tested in QEMU with
SERENITY_EXTRA_QEMU_ARGS='-M gic-version=3'

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -509,6 +509,7 @@ elseif("${SERENITY_ARCH}" STREQUAL "aarch64")
         Arch/aarch64/InterruptManagement.cpp
         Arch/aarch64/Interrupts.cpp
         Arch/aarch64/Interrupts/GICv2.cpp
+        Arch/aarch64/Interrupts/GICv3.cpp
         Arch/aarch64/MainIdRegister.cpp
         Arch/aarch64/PSCI.cpp
         Arch/aarch64/PageDirectory.cpp
