CI: Select Xcode 26.1
This will be necessary for moving to C++26.

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -87,3 +87,9 @@ runs:
         set -e
         brew update
         brew install coreutils bash ninja wabt ccache unzip qt llvm@18
+
+    - name: 'Select Xcode version'
+      if: ${{ inputs.os == 'macOS' }}
+      shell: bash
+      run: |
+          sudo xcode-select -s /Applications/Xcode_26.1.app/Contents/Developer
