Browser: Add find-in-page widget
This adds a FindInPageWidget to the Browser application, allowing users
to search for text within the current tab.

Features:
- Search textbox with real-time search as you type
- Previous/Next buttons with up/down arrow icons
- Match Case checkbox to toggle case sensitivity
- Result label showing "X of Y matches" or "Phrase not found"
- Close button to hide the widget

Keyboard shortcuts:
- Ctrl+F: Open find-in-page widget
- Enter: Jump to next match
- Shift+Enter: Jump to previous match
- Escape: Close the widget

The widget integrates with LibWebView's existing find_in_page,
find_in_page_next_match, and find_in_page_previous_match APIs.

--- a/Userland/Applications/Browser/CMakeLists.txt
+++ b/Userland/Applications/Browser/CMakeLists.txt
@@ -7,6 +7,7 @@ serenity_component(
 
 stringify_gml(BrowserWindow.gml BrowserWindowGML.h browser_window_gml)
 stringify_gml(EditBookmark.gml EditBookmarkGML.h edit_bookmark_gml)
+stringify_gml(FindInPageWidget.gml FindInPageWidgetGML.h find_in_page_widget_gml)
 stringify_gml(History/HistoryWidget.gml HistoryWidgetGML.h history_widget_gml)
 stringify_gml(StorageWidget.gml StorageWidgetGML.h storage_widget_gml)
 stringify_gml(Tab.gml TabGML.h tab_gml)
@@ -16,6 +17,7 @@ set(SOURCES
     BrowserWindow.cpp
     CookiesModel.cpp
     DownloadWidget.cpp
+    FindInPageWidget.cpp
     History/HistoryModel.cpp
     History/HistoryWidget.cpp
     IconBag.cpp
@@ -32,6 +34,7 @@ set(SOURCES
 set(GENERATED_SOURCES
     BrowserWindowGML.h
     EditBookmarkGML.h
+    FindInPageWidgetGML.h
     HistoryWidgetGML.h
     StorageWidgetGML.h
     TabGML.h
