test: Add support for the -s option

--- a/Userland/Utilities/CMakeLists.txt
+++ b/Userland/Utilities/CMakeLists.txt
@@ -381,6 +381,7 @@ target_link_libraries(syscall PRIVATE LibSystem)
 target_link_libraries(ttfdisasm PRIVATE LibGfx)
 target_link_libraries(tar PRIVATE LibArchive LibCompress LibFileSystem)
 target_link_libraries(telws PRIVATE LibProtocol LibLine LibURL)
+target_link_libraries(test-bin PRIVATE LibFileSystem)
 target_link_libraries(test-imap PRIVATE LibIMAP)
 target_link_libraries(test-jpeg-roundtrip PRIVATE LibGfx)
 target_link_libraries(test-pthread PRIVATE LibThreading)
